--- a/src/grapher/pages/Novedades.module.css
+++ b/src/grapher/pages/Novedades.module.css
@@ -10,40 +10,53 @@
 }
 
 .title {
-	width: 98.4%;
+	max-width: 144rem;
+	width: clamp(36rem, 90vw, 144rem);
+	min-width: 36rem;
 	font-size: 4.8rem;
 	color: var(--dark-blue);
 	text-align: center;
 	margin: 0 2rem;
-	padding-top: 1rem;
 }
 
 .newsRow1 {
 	display: flex;
 	max-width: 144rem;
+	width: clamp(36rem, 90vw, 144rem);
+	min-width: 36rem;
 	flex-direction: row;
-	padding: 5rem;
+	padding: 0rem;
+	height: 40rem;
 }
 
 .newsRow2 {
 	display: flex;
 	max-width: 144rem;
+	width: clamp(36rem, 90vw, 144rem);
+	min-width: 36rem;
 	flex-direction: row;
-	padding: 5rem;
+	padding: 0rem;
+	height: 40rem;
 }
 
 .article1 {
-	width: 80rem;
+	max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
 	font-size: 2.2rem;
 	align-self: center;
 	text-align: justify;
+	padding: 0rem 3rem 0rem 3rem;
 	> p {
 		margin-bottom: 4rem;
 	}
+	
 }
 
 .img_container {
-	width: 60rem;
+	max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
 }
 
 .image1 {
@@ -51,8 +64,10 @@
     text-align: center;
     place-items: center;
     height: 40rem;
-    width: 60rem;
-    margin: 3rem 0rem 0rem 10rem;
+    max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
+    margin: 0rem 0rem 0rem 0rem;
 }
 
 .video1 {
@@ -60,38 +75,52 @@
     text-align: center;
     place-items: center;
     height: 34rem;
-    width: 60rem;
-    margin: 0rem 0rem 5rem 0rem;
+    max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
+    margin: 0rem 0rem 0rem 0rem;
 }
 
 .video_container {
-	width: 60rem;
+	max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
 }
 
 .article2 {
-	width: 80rem;
+	max-width: 70rem;
+	width: clamp(30rem, 45vw, 70rem);
+	min-width: 30rem;
 	font-size: 2.2rem;
 	align-self: center;
 	text-align: justify;
-	padding: 0rem 0rem 0rem 10rem;
+	padding: 0rem 3rem 0rem 3rem;
 	> p {
 		margin-bottom: 4rem;
 	}
 }
 
-.second_title {
-	width: 100%;
+.update {
 	max-width: 144rem;
+	width: clamp(36rem, 90vw, 144rem);
+	min-width: 36rem;
+}
+
+.second_title {
+	max-width: 144rem;
+	width: clamp(36rem, 90vw, 144rem);
+	min-width: 36rem;
 	font-size: 4.8rem;
 	color: var(--dark-blue);
 	border-top: 3px solid var(--gray);
-	margin: 6rem 0 3rem 0;
+	margin: 1rem 0rem 3rem 0rem;
 }
 
 .description {
-	width: 100%;
 	max-width: 144rem;
-	font-size: 2.4rem;
+	width: clamp(36rem, 90vw, 144rem);
+	min-width: 36rem;
+	font-size: 2.2rem;
 	text-align: left;
 	margin-bottom: 6rem;
 	/* > p {
@@ -104,96 +133,114 @@
 	margin: 2rem 0;
 }
 
-@media screen and (max-width: 1500px) {
-	.grid_container {
-		grid-template-columns: 20rem 20rem 20rem 20rem 20rem;
-		grid-template-rows: repeat(2, 40rem);
-		row-gap: 6rem;
-	}
-	.second_title {
-		max-width: 100rem;
-	}
-	.description {
-		max-width: 100rem;
-	}
-}
-
 @media screen and (max-width: 1024px) {
-	.grid_container {
-		display: flex;
-		flex-direction: column;
-		row-gap: 0;
-	}
-	.img_container {
-		order: 1;
-		margin: 2rem 2rem 0;
-		height: 40rem;
-	}
-	.article1 {
-		order: 2;
-		font-size: 2.2rem;
-		margin: 1rem 2rem 4rem;
-		padding-right: 0;
-	}
-	.video_container {
-		order: 3;
-		margin: 2rem 2rem 0;
-		height: 40rem;
-	}
-	.article2 {
-		order: 4;
-		font-size: 2.2rem;
-		margin: 1rem 2rem 4rem;
-		padding-left: 0;
-	}
-	.second_title {
-		max-width: 76rem;
-		margin: 6rem 2rem 3rem;
-	}
-	.description {
-		max-width: 76rem;
-		font-size: 2.2rem;
-	}
-}
 
-@media screen and (max-width: 768px) {
-	.title {
-		font-size: 3.8rem;
-	}
-	.grid_container {
+	.newsRow1 {
 		display: flex;
 		flex-direction: column;
-		row-gap: 0;
+		margin: 2rem 0rem 4rem 0rem;
+		max-width: 100rem;
+		width: clamp(36rem, 90vw, 100rem);
+		min-width: 36rem;
+		height: 60rem;
+		padding: 0rem;
 	}
+
 	.img_container {
 		order: 1;
-		margin: 2rem 2rem 0;
+		margin: 2rem 0rem;
+		height: 35rem;
+		max-width: 100rem;
+		width: clamp(36rem, 90vw, 100rem);
+		min-width: 36rem;
+		padding: 0rem 0rem 4rem 0rem;
+	}
+
+	.image1 {
+		max-width: 100rem;
+		width: clamp(36rem, 90vw, 100rem);
+		min-width: 36rem;
 		height: 40rem;
 	}
+
 	.article1 {
 		order: 2;
-		margin: 1rem 2rem 4rem;
-		padding-right: 0;
+		height: 20rem;
+		font-size: 2.2rem;
+		margin: 3rem 0rem 0rem 0rem;
+		max-width: 90rem;
+		width: clamp(36rem, 90vw, 90rem);
+		min-width: 36rem;
+		padding: 2rem 0rem 0rem 0rem;
+		> p {
+			margin-top: 0rem;
+			margin-bottom: 2rem;
+		}
 	}
+
+	.newsRow2 {
+		display: flex;
+		flex-direction: column;
+		margin: 2rem 0rem 4rem 0rem;
+		max-width: 100rem;
+		width: clamp(36rem, 90vw, 100rem);
+		min-width: 36rem;
+		height: 60rem;
+		padding: 0rem;
+	}
+
 	.video_container {
 		order: 3;
-		margin: 2rem 2rem 0;
-		height: 40rem;
+		margin: 2rem 0rem;
+		height: 30rem;
+		max-width: 90rem;
+		place-items: center;
+		justify-content: center;
+		text-align: center;
+		align-items: center;
+		width: clamp(36rem, 90vw, 90rem);
+		min-width: 36rem;
+		padding: 0rem 0rem 0rem 0rem;
 	}
+
+	.video1 {
+		max-width: 80rem;
+		width: clamp(36rem, 70vw, 80rem);
+		min-width: 36rem;
+		height: 30rem;
+	}
+
 	.article2 {
 		order: 4;
-		margin: 1rem 2rem 4rem;
-		padding-left: 0;
+		height: 20rem;
+		font-size: 2.2rem;
+		margin: 3rem 0rem 0rem 0rem;
+		max-width: 90rem;
+		width: clamp(36rem, 90vw, 90rem);
+		min-width: 36rem;
+		padding: 2rem 0rem 0rem 0rem;
 	}
+
 	.second_title {
-		font-size: 3.8rem;
-		max-width: 575rem;
-		margin: 6rem 2rem 3rem;
-		padding: 2rem;
+		max-width: 90rem;
+		width: clamp(36rem, 80vw, 90rem);
+		min-width: 36rem;
+		margin: 1rem 0rem;
+		padding: 0rem;
 	}
+
 	.description {
-		max-width: 575rem;
-		padding: 2rem;
+		max-width: 90rem;
+		width: clamp(36rem, 90vw, 90rem);
+		min-width: 36rem;
+		font-size: 2.2rem;
+		padding: 0rem;
+		margin: 0rem;
+	}
+
+	.update{
+		margin: 0rem;
+		padding: 0rem;
 	}
 }
 
