--- a/src/grapher/pages/Novedades.module.css
+++ b/src/grapher/pages/Novedades.module.css
@@ -129,7 +129,7 @@
 }
 
 .ul {
-	padding-left: 8rem;
+	padding-left: 4rem;
 	margin: 2rem 0;
 }
 
@@ -246,41 +246,118 @@
 
 @media screen and (max-width: 575px) {
 	.title {
-		font-size: 3.8rem;
+		font-size: 3.4rem;
+		text-align: center;
 	}
-	.grid_container {
+	
+	.newsRow1 {
 		display: flex;
 		flex-direction: column;
-		row-gap: 0;
+		margin: 2rem 0rem 4rem 0rem;
+		max-width: 57rem;
+		width: clamp(36rem, 90vw, 57rem);
+		min-width: 36rem;
+		height: 55rem;
+		padding: 0rem;
 	}
+
 	.img_container {
 		order: 1;
-		margin: 2rem 2rem 0;
+		margin: 2rem 0rem;
 		height: 30rem;
+		max-width: 570rem;
+		width: clamp(36rem, 90vw, 57rem);
+		min-width: 36rem;
+		padding: 0rem 0rem 4rem 0rem;
 	}
+
+	.image1 {
+		max-width: 57rem;
+		width: clamp(36rem, 90vw, 57rem);
+		min-width: 36rem;
+		height: 35rem;
+	}
+
 	.article1 {
 		order: 2;
-		margin: 1rem 2rem 4rem;
-		padding-right: 0;
+		height: 20rem;
+		font-size: 2.2rem;
+		margin: 3rem 0rem 0rem 0rem;
+		max-width: 52rem;
+		width: clamp(36rem, 90vw, 52rem);
+		min-width: 36rem;
+		padding: 2rem 0rem 0rem 0rem;
+		> p {
+			margin-top: 0rem;
+			margin-bottom: 2rem;
+		}
 	}
+
+	.newsRow2 {
+		display: flex;
+		flex-direction: column;
+		margin: 2rem 0rem 4rem 0rem;
+		max-width: 57rem;
+		width: clamp(36rem, 90vw, 57rem);
+		min-width: 36rem;
+		height: 65rem;
+		padding: 0rem;
+	}
+
 	.video_container {
 		order: 3;
-		margin: 2rem 2rem 0;
-		height: 30rem;
+		margin: 2rem 0rem;
+		height: 20rem;
+		max-width: 52rem;
+		place-items: center;
+		justify-content: center;
+		text-align: center;
+		align-items: center;
+		width: clamp(36rem, 90vw, 52rem);
+		min-width: 36rem;
+		padding: 0rem 0rem 0rem 0rem;
 	}
+
+	.video1 {
+		max-width: 54rem;
+		width: clamp(36rem, 70vw, 54rem);
+		min-width: 36rem;
+		height: 20rem;
+	}
+
 	.article2 {
 		order: 4;
-		margin: 1rem 2rem 4rem;
-		padding-left: 0;
+		height: 20rem;
+		font-size: 2.2rem;
+		margin: 3rem 0rem 0rem 0rem;
+		max-width: 57rem;
+		width: clamp(36rem, 90vw, 57rem);
+		min-width: 36rem;
+		padding: 2rem 0rem 0rem 0rem;
 	}
+
 	.second_title {
-		font-size: 3.8rem;
-		max-width: 575rem;
-		margin: 6rem 2rem 3rem;
-		padding: 2rem;
+		max-width: 57rem;
+		width: clamp(36rem, 80vw, 57rem);
+		min-width: 36rem;
+		padding: 2rem 0rem 0rem 0rem;
+		margin: 0rem 0rem 2rem 0rem;
+		font-size: 3.1rem;
 	}
+
 	.description {
-		max-width: 575rem;
-		padding: 2rem;
+		max-width: 57rem;
+		width: clamp(36rem, 90vw, 57rem);
+		min-width: 36rem;
+		font-size: 2.2rem;
+		padding: 0rem;
+		margin: 0rem;
 	}
+
+	.update{
+		margin: 0rem;
+		padding: 0rem;
+	}
+
+	
 }
